modified for myself

--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h2 class="h4 my-2">About Me</h2>
-                        <p>I am passionate about Software Testing. In my education and business life, I have always been
-                            open to self-development and learning new information.
-                            I am a reliable person who fulfills his duties on time and in the most accurate way.</p>
+                        <p>Hello, welcome to my portfolio page. I'm Furkan Emiroglu. 
+                        I am a developer passionate about playing and developing video games. 
+                        I can't sleep well after a day of not learning something new. 
+                        You can take a look at my work on this page..</p>
                         <div class="row mt-3">
                             <div class="col-sm-2">
                                 <div class="pb-1">Birthdate:</div>
@@ -129,9 +130,9 @@
                 </div>
                 <div class="text-center">
                     <i class="fas fa-graduation-cap"></i>
-                    <div class="pb-2 fa-2x">Kocaeli University</div>
-                    <div class="pb-2 fa-2x fw-lighter">Electrical Engineering</div>
-                    <div class="pb-3 fw-bolder">2016 - 2020</div>
+                    <div class="pb-2 fa-2x">Dokuz Eylul University</div>
+                    <div class="pb-2 fa-2x fw-lighter">Structural Engineering</div>
+                    <div class="pb-3 fw-bolder">2016 - 2021</div>
                 </div>
                 </br>
                 <div class="text-center">
@@ -143,19 +144,11 @@
         </div>
         <div class="section px-3 px-lg-4 pt-5" id="experience">
             <div class="container-narrow">
-                <div class="text-center mb-5">
-                    <h2 class="marker marker-center">Experience</h2>
-                </div>
+                
                 <div class="text-center">
-                    <div class="pb-2 fa-2x fw-lighter">Electrical Engineering</div>
-                    <div class="pb-3 fw-bolder">August 2020 - September 2021</div>
-                </div>
-                </br>
-                </br>
-                <div class="text-center">
-                    <div class="pb-1 fa-2x">Borusan CAT @via TesterYou</div>
-                    <div class="pb-2 fa-2x fw-lighter">Software Test Engineer</div>
-                    <div class="pb-3 fw-bolder">February 2022 - March 2022</div>
+                    <div class="pb-1 fa-2x">Vercial Games</div>
+                    <div class="pb-2 fa-2x fw-lighter">Game Developer Intern</div>
+                    <div class="pb-3 fw-bolder">March 2022 - still continues</div>
                 </div>
             </div>
         </div>
@@ -175,12 +168,9 @@
                                 </div>
                             </div>
                             <div class="card-body px-2 py-2">
-                                <h4 class="fw-normal">● Java </h4>
-                                <h4 class="fw-normal">● Python </h4>
                                 <h4 class="fw-normal">● C# </h4>
+                                <h4 class="fw-normal">● Python </h4>
                                 <h4 class="fw-normal">● JavaScript </h4>
-                                <h4 class="fw-normal">● SQL </h4>
-                                <h4 class="fw-normal">● CSS </h4>
                             </div>
                         </div>
                     </div>
@@ -195,11 +185,9 @@
                                 </div>
                             </div>
                             <div class="card-body px-2 py-1">
-                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● Selenium       ● REST           ● Jenkins</pre>
-                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● Cucumber     ● Appium      ● Postman</pre>
-                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● TestNG          ● Specflow    ● Spring</pre>
-                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● JUnit              ● Behave       ● JMeter</pre>
-                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● NUnit             ● Karate     </pre>
+                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● Unity</pre>
+                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● Numpy</pre>
+                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● TensorFlow</pre>
                             </div>
                         </div>
                     </div>
@@ -224,14 +212,14 @@
                                     <small>(2022)</small>
                                 </div>
                             </div>
-                            <a class="nav-link" href="https://github.com/MustafaSelimG/RESTAssuredApiTests"
+                            <a class="nav-link" href="https://github.com/FurkanEmiroglu/Example-Running-Game"
                                target="_blank"
                                title="project1-link"><i class="fab fa-github"
                                                         style="font-size: xx-large"></i></a>
                         </div>
                     </div>
                     <div class="card-body px-2 py-1">
-                        <p style="font-style: oblique">Implementation of object pooling and observer game design patterns</p>
+                        <p style="font-style: oblique">Implementation of object pooling and observer game design patterns.</p>
 
                     </div>
                 </div>
@@ -241,19 +229,19 @@
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <h3 class="h5 mb-1">Count Masters like Clone Game</h3>
+                                <h3 class="h5 mb-1">My First Game Published on Store</h3>
                                 <div class="text-muted text-small">
                                     <small>(2022)</small>
                                 </div>
                             </div>
-                            <a class="nav-link" href="https://github.com/MustafaSelimG/RESTAssuredApiTests"
+                            <a class="nav-link" href="https://play.google.com/store/apps/details?id=com.FEmiroglu.MatchPeoplePuzzleGame"
                                target="_blank"
                                title="project1-link"><i class="fab fa-github"
                                                         style="font-size: xx-large"></i></a>
                         </div>
                     </div>
                     <div class="card-body px-2 py-1">
-                        <p style="font-style: oblique">Implementation of object pooling and observer game design patterns</p>
+                        <p style="font-style: oblique">Simple color matching puzzle. Used NavMeshAgents for pathfinding.</p>
 
                     </div>
                 </div>
@@ -263,19 +251,19 @@
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <h3 class="h5 mb-1">Count Masters like Clone Game</h3>
+                                <h3 class="h5 mb-1">Unity Army Formations: Modified Components</h3>
                                 <div class="text-muted text-small">
                                     <small>(2022)</small>
                                 </div>
                             </div>
-                            <a class="nav-link" href="https://github.com/MustafaSelimG/RESTAssuredApiTests"
+                            <a class="nav-link" href="https://github.com/FurkanEmiroglu/Unity-Army-Formations"
                                target="_blank"
                                title="project1-link"><i class="fab fa-github"
                                                         style="font-size: xx-large"></i></a>
                         </div>
                     </div>
                     <div class="card-body px-2 py-1">
-                        <p style="font-style: oblique">Implementation of object pooling and observer game design patterns</p>
+                        <p style="font-style: oblique">Some pooling pattern and optimization work on Tarodev's formation work.</p>
 
                     </div>
                 </div>
@@ -285,19 +273,19 @@
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <h3 class="h5 mb-1">Count Masters like Clone Game</h3>
+                                <h3 class="h5 mb-1">Learning Project: CubeSurfers</h3>
                                 <div class="text-muted text-small">
                                     <small>(2022)</small>
                                 </div>
                             </div>
-                            <a class="nav-link" href="https://github.com/MustafaSelimG/RESTAssuredApiTests"
+                            <a class="nav-link" href="https://github.com/FurkanEmiroglu/Learning-Ex-2-for-Unity"
                                target="_blank"
                                title="project1-link"><i class="fab fa-github"
                                                         style="font-size: xx-large"></i></a>
                         </div>
                     </div>
                     <div class="card-body px-2 py-1">
-                        <p style="font-style: oblique">Implementation of object pooling and observer game design patterns</p>
+                        <p style="font-style: oblique">A study on the stack mechanism widely used in hypercasual runners.</p>
 
                     </div>
                 </div>
