--- a/index.html
+++ b/index.html
@@ -93,9 +93,12 @@
                     <div class="col-md-6">
                         <h2 class="h4 my-2">About Me</h2>
                         <p>Hello, welcome to my portfolio page. I'm Furkan Emiroglu. 
-                        I am a developer passionate about playing and developing video games. 
+                        Former structural engineer, full-time developer, who is passionate about playing and developing video games.
                         I can't sleep well after a day of not learning something new. 
-                        You can take a look at my work on this page..</p>
+                        You can take a look at my work on this page. Hope you'll like it.
+                    	</p>
+                    	My twitter account where you can follow my unity learning challange in 60 days: <a href="https://twitter.com/60daysdeveloper/status/1501159359535095809">@60daysdeveloper</a>
+                    	</p>
                         <div class="row mt-3">
                             <div class="col-sm-2">
                                 <div class="pb-1">Birthdate:</div>
@@ -107,7 +110,7 @@
                                 <div class="pb-1">Address:</div>
                             </div>
                             <div class="col-sm-10">
-                                <div class="pb-1 fw-bolder">Istanbul, Turkey</div>
+                                <div class="pb-1 fw-bolder">Ankara, Turkey</div>
                             </div>
                             <div class="col-sm-2">
                                 <div class="pb-1">Languages:</div>
@@ -144,11 +147,15 @@
         </div>
         <div class="section px-3 px-lg-4 pt-5" id="experience">
             <div class="container-narrow">
-                
+                <div class="text-center mb-5">
+                    <div class="pb-1 fa-2x">Twenty Games</div>
+                    <div class="pb-2 fa-2x fw-lighter">Jr. Game Developer</div>
+                    <div class="pb-3 fw-bolder">May 2022 - still continues</div>
+                </div>
                 <div class="text-center">
                     <div class="pb-1 fa-2x">Vercial Games</div>
                     <div class="pb-2 fa-2x fw-lighter">Game Developer Intern</div>
-                    <div class="pb-3 fw-bolder">March 2022 - still continues</div>
+                    <div class="pb-3 fw-bolder">March 2022 - April 2022</div>
                 </div>
             </div>
         </div>
@@ -159,35 +166,35 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="card mb-3" data-aos="fade-right" data-aos-delay="150">
-                            <div class="card-header px-3 py-2">
+                        <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+                            <div class="card-header px-2 py-2">
                                 <div class="d-flex justify-content-between">
                                     <div>
-                                        <h3 class="h4 mb-1">Languages</h3>
+                                        <h3 class="h2 mb-1">Languages</h3>
                                     </div>
                                 </div>
                             </div>
                             <div class="card-body px-2 py-2">
                                 <h4 class="fw-normal">● C# </h4>
                                 <h4 class="fw-normal">● Python </h4>
+                                <h4 class="fw-normal">● Swift </h4>
                                 <h4 class="fw-normal">● JavaScript </h4>
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-6">
-                        <div class="card mb-3" data-aos="fade-left" data-aos-delay="150">
+                        <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
                             <div class="card-header px-2 py-2">
                                 <div class="d-flex justify-content-between">
                                     <div>
-                                        <h3 class="h4 mb-1">Technologies</h3>
+                                        <h3 class="h2 mb-1">Technologies</h3>
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-body px-2 py-1">
-                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● Unity</pre>
-                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● Numpy</pre>
-                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● TensorFlow</pre>
+                            <div class="card-body px-2 py-2">
+                            	<h4 class="fw-normal">● Unity 3D </h4>
+                                <h4 class="fw-normal">● TensorFlow </h4>
+                                <h4 class="fw-normal">● MatLab </h4>
                             </div>
                         </div>
                     </div>
@@ -202,6 +209,48 @@
             <h2 class="marker marker-center">Projects</h2>
         </div>
         <div class="row">
+        	<div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h3 class="h5 mb-1"> Level Up Crowd</h3>
+                                <div class="text-muted text-small">
+                                    <small>(2022)</small>
+                                </div>
+                            </div>
+                            <a class="nav-link" href="https://apps.apple.com/tr/app/level-up-crowd/id1630746770"
+                               target="_blank"
+                               title="project1-link"><i class="fab fa-app-store-ios"
+                                                        style="font-size: xx-large"></i></a>
+                        </div>
+                    </div>
+                    <div class="card-body px-2 py-1">
+                        <p style="font-style: oblique">A hypercasual runner inspired by level up cars. Developed by me and the artists of Twenty Games.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h3 class="h5 mb-1"> Connect Money! </h3>
+                                <div class="text-muted text-small">
+                                    <small>(2022)</small>
+                                </div>
+                            </div>
+                            <a class="nav-link" href="https://apps.apple.com/tr/app/connect-money/id1635131757"
+                               target="_blank"
+                               title="project1-link"><i class="fab fa-app-store-ios"
+                                                        style="font-size: xx-large"></i></a>
+                        </div>
+                    </div>
+                    <div class="card-body px-2 py-1">
+                        <p style="font-style: oblique">Fun puzzle game, Developed by me and the artists of Twenty Games.</p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-6">
                 <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
                     <div class="card-header px-3 py-2">
@@ -212,14 +261,14 @@
                                     <small>(2022)</small>
                                 </div>
                             </div>
-                            <a class="nav-link" href="https://github.com/FurkanEmiroglu/Example-Running-Game"
+                            <a class="nav-link" href="https://www.linkedin.com/posts/furkanemiroglu_60-g%C3%BCnde-unity-ile-neler-yapmay%C4%B1-%C3%B6%C4%9Frenebilirim-activity-6922698399569821696-vjhn?utm_source=linkedin_share&utm_medium=member_desktop_web"
                                target="_blank"
-                               title="project1-link"><i class="fab fa-github"
+                               title="project1-link"><i class="fab fa-linkedin"
                                                         style="font-size: xx-large"></i></a>
                         </div>
                     </div>
                     <div class="card-body px-2 py-1">
-                        <p style="font-style: oblique">Implementation of object pooling and observer game design patterns.</p>
+                        <p style="font-style: oblique">Implementation of object pooling and observer game design patterns. It was an experiment I developed at the end of the thirtieth day of my challenge called "Learning Unity in 60 Days".</p>
 
                     </div>
                 </div>
@@ -229,20 +278,62 @@
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <h3 class="h5 mb-1">My First Game Published on Store</h3>
+                                <h3 class="h5 mb-1">My First Game Published on Google Play Store</h3>
                                 <div class="text-muted text-small">
                                     <small>(2022)</small>
                                 </div>
                             </div>
                             <a class="nav-link" href="https://play.google.com/store/apps/details?id=com.FEmiroglu.MatchPeoplePuzzleGame"
                                target="_blank"
-                               title="project1-link"><i class="fab fa-github"
+                               title="project1-link"><i class="fab fa-google-play"
                                                         style="font-size: xx-large"></i></a>
                         </div>
                     </div>
                     <div class="card-body px-2 py-1">
-                        <p style="font-style: oblique">Simple color matching puzzle. Used NavMeshAgents for pathfinding.</p>
+                        <p style="font-style: oblique">Simple color matching puzzle. I launched it only after 13 days of starting to learn Unity. So there are lots of beginner mistakes here. Still, I am proud of it.</p>
 
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h3 class="h5 mb-1">A simple test case from Skyloft Games</h3>
+                                <div class="text-muted text-small">
+                                    <small>(2022)</small>
+                                </div>
+                            </div>
+                            <a class="nav-link" href="https://drive.google.com/file/d/1vbQv-hLwqHn88HP07iR-_gATbiLviIJw/view?usp=sharing"
+                               target="_blank"
+                               title="project1-link"><i class="fab fa-youtube"
+                                                        style="font-size: xx-large"></i></a>
+                        </div>
+                    </div>
+                    <div class="card-body px-2 py-1">
+                        <p style="font-style: oblique">Using stacks, and donating collectibles like an arcade-idle.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h3 class="h5 mb-1">A simple test case from Twenty Games</h3>
+                                <div class="text-muted text-small">
+                                    <small>(2022)</small>
+                                </div>
+                            </div>
+                            <a class="nav-link" href="https://drive.google.com/file/d/1wVRLcT_RnlP19oZlTWaOG1NSaRV49Uuv/view?usp=sharing"
+                               target="_blank"
+                               title="project1-link"><i class="fab fa-youtube"
+                                                        style="font-size: xx-large"></i></a>
+                        </div>
+                    </div>
+                    <div class="card-body px-2 py-1">
+                        <p style="font-style: oblique">Stacking bricks with rigidbody behaviours.</p>
                     </div>
                 </div>
             </div>
@@ -264,7 +355,6 @@
                     </div>
                     <div class="card-body px-2 py-1">
                         <p style="font-style: oblique">Some pooling pattern and optimization work on Tarodev's formation work.</p>
-
                     </div>
                 </div>
             </div>
@@ -285,7 +375,7 @@
                         </div>
                     </div>
                     <div class="card-body px-2 py-1">
-                        <p style="font-style: oblique">A study on the stack mechanism widely used in hypercasual runners.</p>
+                        <p style="font-style: oblique">A study on the stack mechanism widely used in hypercasual runners. I made this in my first day in Unity.</p>
 
                     </div>
                 </div>
