--- a/demoMainPage.html
+++ b/demoMainPage.html
@@ -25,7 +25,7 @@
 <header class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav" role="navigation">
         <div class="container"><a class="link-dark navbar-brand site-title ps-lg-0" href="#"
-                                  style="font-family: 'MV Boli',serif">< Portfolio ></a>
+                                  style="font-family: 'MV Boli',serif">Welcome!</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
