i will make a nice website from this

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto me-2">
+                    <li class="nav-item"><a class="nav-link" href="index.html#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#experience">Experience</a></li>
@@ -48,6 +49,7 @@
 <div class="page-content">
     <div id="content">
         <header>
+            <div class="section pt-4 px-3 px-lg-4" id="home">
             <div class="cover bg-light">
                 <div class="container px-3">
                     <div class="row">
