--- a/publishedGames.html
+++ b/publishedGames.html
@@ -32,13 +32,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto me-2">
+                    <li class="nav-item"><a class="nav-link" href="index.html#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="publishedGames.html">Published Games</a></li>
-                    <li class="nav-item"><a class="nav-link" href="demoMainPage.html">>> WebGL Demos <<</a></li>
                 </ul>
             </div>
         </div>
