games i created in rooftop added

--- a/publishedGames.html
+++ b/publishedGames.html
@@ -67,6 +67,61 @@
             </div>
         </div>
 
+    <div class="section pt-4 px-3 px-lg-4" id="about">
+        <div class="container-narrow">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3 class="h5 my-2">Beauty Hole</h3>
+                    <p>
+                        An io game with stencils & lots of make-up shaders.
+
+                        </div>
+                            <div class="col-md-4 offset-md-1" data-aos="fade-left" data-aos-delay="100">
+                                <a href="https://play.google.com/store/apps/details?id=com.rooftopgames.beautyhole"><img class="avatar img-thumbnail shadow" src="images/getonplaystore.png" width="150" height="300"></a>
+                                <img class="avatar img-thumbnail shadow" src="images/gameicons/makeuphole.png" width="150" height="250"/>
+                        </div>
+                     <p>
+                </div>
+            </div>
+        </div>
+
+
+    <div class="section pt-4 px-3 px-lg-4" id="about">
+        <div class="container-narrow">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3 class="h5 my-2">Archer Runner!</h3>
+                    <p>
+                        An archery game without Nvidia PhysX. Movement and arrow physics completely written by me. Also contains a prefractured mesh & dynamic material system implemented by my ECS architecture.
+
+                        </div>
+                            <div class="col-md-4 offset-md-1" data-aos="fade-left" data-aos-delay="100">
+                                <a href="https://play.google.com/store/apps/details?id=com.rooftop.archersniper"><img class="avatar img-thumbnail shadow" src="images/getonplaystore.png" width="150" height="300"></a>
+                                <img class="avatar img-thumbnail shadow" src="images/gameicons/archerrunner.png" width="150" height="250"/>
+                        </div>
+                     <p>
+                </div>
+            </div>
+        </div>
+
+    <div class="section pt-4 px-3 px-lg-4" id="about">
+        <div class="container-narrow">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3 class="h5 my-2">Drift Survival</h3>
+                    <p>
+                        Arcade drifting game with custom shaders created by me.
+
+                        </div>
+                            <div class="col-md-4 offset-md-1" data-aos="fade-left" data-aos-delay="100">
+                                <a href="https://play.google.com/store/apps/details?id=com.rooftop.driftsurvival"><img class="avatar img-thumbnail shadow" src="images/getonplaystore.png" width="150" height="300"></a>
+                                <img class="avatar img-thumbnail shadow" src="images/gameicons/driftsurvival.png" width="150" height="250"/>
+                        </div>
+                     <p>
+                </div>
+            </div>
+        </div>
+
 
     <div class="section pt-4 px-3 px-lg-4" id="about">
         <div class="container-narrow">
